--- a/MixedStringToNumber/MixedStringToNumber.vcxproj
+++ b/MixedStringToNumber/MixedStringToNumber.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{66ea0e40-59a7-43f1-a79b-951510396ed7}</ProjectGuid>
-    <RootNamespace>NewIDRecommendation</RootNamespace>
+    <ProjectGuid>{b55f3724-1b2f-4ef8-9384-f8b8f786eb87}</ProjectGuid>
+    <RootNamespace>MixedStringToNumber</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -143,7 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="NewIDRecommendation.cpp" />
+    <ClCompile Include="MixedStringToNumber.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
